# YCCoding

QuickMusicPlayer/: .gitignore  AinmationStackPage.qml  AnimationGifPage.qml  AnimationPageView.qml  AnimationPropertyPage1.qml  AnimationPropertyPage2.qml  AnimationStatesPage.qml  App.cpp  App.qml  AuthManager.cpp  AuthManager.h  CMakeLists.txt  ContactDetailView.qml  ContactEditor.qml  ContactModel.cpp  ContactModel.h  Controller.cpp  Controller.h  CppQmlDataChangePage.qml  CppQmlListPage.qml  CppQmlLogginPage.qml  CppQmlPageView.qml  CppQmlSignls1Page.qml  CppQmlSignls2Page.qml  CppQmlStudentPage.qml  DataModel.cpp  DataModel.h  DetailFavoritePageView.qml  DetailField.qml  DetailHistoryPageView.qml  DetailLocalPageView.qml  DetailPlayListPageView.qml  DetailRecommendPageView.qml  DetailSearchPageView.qml  DialogCustomDialog.qml  DialogListPageView.qml  HomeContrainView.qml  HomeHeaderView.qml  HomePage.qml  LayoutBottomView.qml  (+15 more)
YCAndroid/: README.md  build.gradle  debug.gradle  settings.gradle
YCAndroid/Business/AppHelper/: build.gradle
YCAppTool/: settings.gradle
YCAppTool/CommonLib/AppLogLib/src/main/cpp/: CMakeLists.txt  log_buffer.cpp  mmap_helper.cpp
YCAppTool/MmapLog/: README.md
YCAppTool/ToolLib/: README.md
YCCppBlog/: CMakeLists.txt
YCCppBlog/c_chapter/chapter7/: a.out  day7_7_8.c
YCCppBlog/c_demo/bank/: BankManager.c  BankManager.h  a.out  bank_accounts.txt
YCCppBlog/c_demo/calculator/: calculator.c  calculator.h  calculator_main.c  constants.c  constants.h  error_handler.c  error_handler.h  history.c  history.h  parser.c  parser.h  stack.c  stack.h
YCCppBlog/c_demo/computer/: a.out  admin.txt  computer_main.cpp  file_operation.h  identity.h  user.h
YCCppBlog/c_demo/speaker/complex/: speech_main.c
YCCppBlog/c_demo/speaker/easy/: speech_worker.c
YCCppBlog/c_demo/sql/: a.out  database.txt  sql_manager.c  sql_manager.h
YCCppBlog/c_demo/student/: .\stuinfo.txt  StudentManager.c  StudentManager.h  a.out  student_manager.c  student_manager.h  stuinfo.txt
YCCppBlog/c_demo/worker/: DemoWorker.c  Employee.c  Employee.h  WorkManager.c  WorkManager.h  WorkerError.h  WorkerLogger.c  WorkerLogger.h  WorkerTools.h  WorkerValid.c  WorkerValid.h  a.out  employee_data.txt  system_log.txt
YCCppBlog/chapter1/: day_1_7.cpp  day_1_9.cpp
YCCppBlog/chapter10/: a.out  day_10_1.cpp  day_10_2.cpp  day_10_2_4.cpp  day_10_3_4.cpp  day_10_4_2.cpp  day_10_4_3.cpp  day_10_4_4.cpp
YCCppBlog/chapter3/: day_3_1_2.cpp  day_3_7.cpp
YCCppBlog/chapter4/: da.cpp  day_4_3.cpp
YCCppBlog/chapter6/: day_6_6.cpp  day_6_7.cpp
YCCppBlog/chapter7/: day_7_1.cpp
YCCppBlog/chapter8/: day_8_4.cpp  day_8_5.cpp  day_8_6.cpp  day_8_8.cpp
YCCppBlog/cpp_chapter/: Demo.cpp  DemoTest.cpp  DemoTest.h  yt_process_killer.cpp  yt_process_killer.h
YCCppBlog/cpp_chapter/chapter1/: a.out
YCCppBlog/cpp_chapter/chapter10/: a.out  day_10_3_1.cpp  day_10_3_2.cpp  day_10_3_3.cpp  day_10_4_1.cpp  day_10_4_5.cpp  day_10_4_8.cpp
YCCppBlog/cpp_chapter/chapter13/: day13_6.cpp  day_13.h  day_13_1.cpp  day_13_3.cpp
YCCppBlog/cpp_chapter/chapter14/: day_14_1.cpp
YCCppBlog/cpp_chapter/chapter16/: day_16_1_3.cpp  day_16_1_4.cpp
YCCppBlog/cpp_chapter/chapter3/: day_3_1_1.cpp
YCCppBlog/cpp_chapter/chapter4/: day_4_2.cpp  day_4_4.cpp  day_4_5.cpp
YCCppBlog/cpp_chapter/chapter6/: a.out  day_6_7_1.cpp  day_6_7_2.cpp
YCCppBlog/cpp_chapter/chapter7/: a.out  day_7_4.cpp
YCCppBlog/cpp_chapter/chapter8/: a.out  day_8_2.cpp  day_8_3.cpp
YCCppBlog/cpp_demo/bank/: Account.cpp  Account.h  Bank.cpp  Bank.h  BankUserManager.cpp  BankUserManager.h  FileManager.cpp  FileManager.h  accounts.txt
YCCppBlog/cpp_demo/looper/: IPollingStrategy.h  LoopPolling.cpp  LoopPolling.h  Looper.cpp  Looper.h  LooperTest.cpp  Poller.cpp  Poller.h  TaskStatistics.cpp  TaskStatistics.h  TimeConverter.cpp  TimeConverter.h  TimeUnit.h
YCCppBlog/cpp_demo/school/: ComputerManager.cpp  ComputerManager.h  Identity.h  Manager.cpp  Manager.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  ToolUtils.cpp  ToolUtils.h  student.txt  teacher.txt
YCCppBlog/cpp_demo/speaker/: FileSpeechUtils.cpp  FileSpeechUtils.h  Speaker.h  SpeechManager.cpp  SpeechManager.h  a.out  speech.txt
YCCppBlog/cpp_demo/sql/: SqlManager.cpp  SqlManager.h  a.out
YCCppBlog/cpp_demo/student/: StudentManager.cpp  StudentManager.h  a.out
YCCppBlog/cpp_demo/thread/: ThreadPool.cpp  ThreadPool.h  ThreadPoolTest.cpp
YCCppBlog/cpp_demo/ticket/: ConfigManager.cpp  ConfigManager.h  Customer.cpp  Customer.h  Logger.cpp  Logger.h  PerformanceMonitor.cpp  PerformanceMonitor.h  TicketEasyManager.cpp  TicketManager.cpp  TicketSystem.cpp  TicketSystem.h  TicketWindow.cpp  TicketWindow.h  config.txt  ticket_system_log.txt
YCCppBlog/cpp_demo/worker/: Boss.cpp  Boss.h  Employee.cpp  Employee.h  Manager.cpp  Manager.h  Worker.cpp  Worker.h  WorkerManager.cpp  WorkerManager.h  WorkerTest.cpp
YCCppBlog/cpp_hal_worker/: access_strategy.h  relay_strategy.cpp  relay_strategy.h  strategy_utils.h  wiegand_strategy.cpp  wiegand_strategy.h
YCCppBlog/cpp_worker/: access_strategy.h  relay_strategy.cpp  relay_strategy.h  strategy_utils.cpp
YCCppBlog/demo/: StudentManager.cpp  StudentManager.h
YCCppBlog/demo/school/: AdminManager.cpp  AdminManager.h  ComputerManager.cpp  ComputerManager.h  GlobalFile.h  Identity.h  Manager.cpp  Manager.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h
YCCppBlog/demo/speaker/: Speaker.h  SpeechManager.cpp  SpeechManager.h
YCCppBlog/demo/student/: StudentManager.cpp  StudentManager.h
YCCppBlog/demo/worker/: Boss.cpp  Boss.h  Employee.cpp  Employee.h  Manager.cpp  Manager.h  Worker.h  WorkerManager.cpp  WorkerManager.h  WorkerTest.cpp
YCCppBlog/thirdlib/json/: json11.cpp  json11.h  jsonTest.cpp
YCCppBlog/thirdlib/thread/: ThreadPool.cpp  ThreadPool.h  ThreadPoolTest.cpp
YCDesignBlog/more/: LodDesign.java
YCJavaBlog/day1/: FloatAnalysis.java
YCStudyC/: CMakeLists.txt  README.md
YCStudyC/chapter1/: day_1_3_1.c
YCStudyC/day8/: day8_1_pointer.c
YCStudyCpp/YCStudyCpp/: CMakeLists.txt
(+1026 files in other folders)
