cmake_minimum_required(VERSION 3.28)
project(YCCppBlog)

set(CMAKE_CXX_STANDARD 17)

add_executable(YCCppBlog main.cpp
        chapter10/day_10_1.cpp
        chapter10/day_10_1.cpp
        chapter10/day_10_2.cpp
        chapter10/day_10_2_4.cpp
        chapter10/day_10_3_1.cpp
        chapter10/day_10_3_2.cpp
        chapter10/day_10_3_3.cpp
        chapter10/day_10_3_4.cpp
        chapter10/day_10_3_4.cpp
        chapter8/day_8_2.cpp
        chapter8/day_8_3.cpp
        chapter8/day_8_4.cpp
        chapter8/day_8_7.cpp
        chapter8/day_8_5.cpp
        chapter8/day_8_9.cpp
        chapter8/day_8_8.cpp
        chapter8/day_8_6.cpp
        chapter6/day_6_7_1.cpp
        chapter6/day_6_7_2.cpp
        chapter10/day_10_4_1.cpp
        chapter10/day_10_4_5.cpp
        chapter10/day_10_4_4.cpp
        chapter10/day_10_4_3.cpp
        chapter10/day_10_4_2.cpp
        chapter10/day_10_4_8.cpp
        chapter14/day_14_1.cpp
        chapter16/day_16_1.cpp
        chapter16/day_16_1_3.cpp
        chapter16/day_16_1_4.cpp
        demo/StudentManager.cpp
        demo/StudentManager.h)
